--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,7 @@
     "arrow-body-style": 0,
     "default-case": 0,
     "consistent-return": 0,
-    "comma-dangle": 1,
+    "comma-dangle": [1, "always-multiline"],
     "comma-spacing": 1,
     "class-methods-use-this": 0,
     "spaced-comment": 0,
